Docs: full per-module documentation, the benchmark explainer, the hub
Every module page is now that module's complete documentation —
guide (how it works and why), tutorial (worked, test-shaped
examples), API reference (the surface in one table), gotchas. The
new docs/benchmarks.md walks every measured case: what the lane
measures, the table, WHY the okay number is what it is (no runtime
where none is needed; the Bind rotation; zero-allocation telling;
relay; chunk amortization; inline staging), why each competitor's
number differs (fiber-runtime tax, quadratic resumption, per-element
streaming machinery), and where the honest limits are (the kyo
laziness asterisk, fs2 worst cases, the totality tax on JSON
decode). docs/README.md reorganized as the hub: start-here,
modules, specs, and the papers underneath — Kiselyov's freer monads,
Atkey's parameterised notions, and Bjarnason's Stackless Scala
(trampolines.pdf), the reason the runners are defunctionalized
enums. New benchmarks (TextBenchmark: chunked lexing, incremental
reparse, Json/Cbor vs circe, BPE; AsyncDriveBenchmark: runWith vs
runAsync) compile and await a quiet-host measurement window — the
sibling build storm (load 160+) made this session's numbers
unusable, recorded and discarded.